Firefox Zoom Scenario, URL to URI code update